--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -7,7 +7,8 @@
     "gsap": "^2.1.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
