--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -7,6 +7,7 @@
     "gsap": "^2.1.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-parallax": "^2.1.0",
     "react-scripts": "2.1.5",
     "uuid": "^3.3.2"
   },
